k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - api.yargisalzeka.com
      secretName: api-tls
  rules:
    - host: api.yargisalzeka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 80
